<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tuw_gazebo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="markus.bader@tuwien.ac.at">Markus Bader</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>builtin_interfaces</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_msgs</depend>
  <depend>rcl</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rmw</depend>
  <depend>std_srvs</depend>
  <depend>tinyxml_vendor</depend>
  <depend>gazebo_ros_pkgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
